--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -3,6 +3,7 @@ Name: Alyssa Bhagwandin
 Filename: style.css
 Course: INFT 2202
 Date: January 8th, 2024
+Last Edited Date: January 30th, 2025
 Description: This is my general style sheet!
 */
 
