--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -1,21 +1,14 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Webpack App</title>
+    </head>
+    <body>
+        
 
-  <!-- Include Header -->
-  <%- include('partials/header.ejs') %>
-
-  <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Welcome to Zookédex!</h1>
-            <p class="opacity-75">Your one-stop destination to discover, learn about, and add to an ever-growing collection of animals from around the world!</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <!-- Include Footer -->
-  <%- include('partials/footer.ejs') %>
+        <div id="app"></div>
+       
+    
+  </body>
+</html>
