--- a/src/client/app/components/pages/about/about.ejs
+++ b/src/client/app/components/pages/about/about.ejs
@@ -11,7 +11,7 @@
         <div class="row">
           <!-- Image Section -->
           <div class="col-md-4 text-center">
-            <img src="img/Poké_Ball_icon.png" alt="Profile Picture" class="img-fluid rounded-circle mb-4">
+            <img src="../../../../img/Poke_Ball_icon.png" alt="Profile Picture" class="img-fluid rounded-circle mb-4">
           </div>
 
           <!-- Text Section -->
