--- a/src/client/app/components/footer/footer.ejs
+++ b/src/client/app/components/footer/footer.ejs
@@ -1,14 +1,7 @@
-
-  <!-- FOOTER -->
-  <footer class="container">
-      <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
-    </footer>
-    JavaScript Files
-    <!-- Added this because the instructions said to put it at the bottom. -->
-    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="app/app.js"></script>
-    <script type="module" src="app/animals/create.js"></script>
-  </body>
-</html>
-  
+<footer class="container">
+  <p class="float-end"><a href="#">Back to top</a></p>
+  <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. 
+    &middot; <a data-navigo href="/privacy-policy">Privacy</a> 
+    &middot; <a data-navigo href="/terms">Terms</a>
+  </p>
+</footer>
