--- a/src/client/app/components/header/header.ejs
+++ b/src/client/app/components/header/header.ejs
@@ -1,28 +1,26 @@
-
-    <!-- The nav bar stuff!-->
-    <header>
-      <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
-        <div class="container-fluid">
-          <a class="navbar-brand active" data-navigo="/" href="index.ejs"> <i class="fa-solid fa-circle-dot"></i> Zookédex</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" data-navigo="/search" href="search.ejs"><i class="fas fa-list"></i> List</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-navigo="/create" href="create.ejs"><i class="fas fa-plus"></i> Create</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-navigo="/about" href="about.ejs"><i class="fas fa-info-circle"></i> About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-navigo="/contact" href="contact.ejs"><i class="fas fa-envelope"></i> Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+<header>
+  <nav class="navbar navbar-expand-md fixed-top custom-navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand active" data-navigo href="/"> <i class="fa-solid fa-circle-dot"></i> Zookédex</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link" data-navigo href="/search"><i class="fas fa-list"></i> List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-navigo href="/create"><i class="fas fa-plus"></i> Create</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-navigo href="/about"><i class="fas fa-info-circle"></i> About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-navigo href="/contact"><i class="fas fa-envelope"></i> Contact</a>
+          </li>          
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
