--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Webpack App</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Zookédex</title>
+        <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     </head>
     <body>
-        
-
         <div id="app"></div>
-       
-    
-  </body>
+    </body>
 </html>
+
